--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <h3>Hello world</h3>
 
 <p>My name is <b>Gilbert</b></p>
+
+<p>This is me when I was one year old</p>
+<img src="http://farm1.static.flickr.com/42/88171920_e74e849c9a_m.jpg" />
