--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/MmeAPpEoGAI" frameborder="0" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/S6kYInaV5N4" frameborder="0" allowfullscreen></iframe>
-<p>these are the best amazing world of gumball ever!!!!!!!</p> 
+<p>these are the best amazing world of gumballs ever!!!!!!!</p> 
 <I Am SO M>L>G></I>
