--- a/index.html
+++ b/index.html
@@ -8,4 +8,18 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/MmeAPpEoGAI" frameborder="0" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/S6kYInaV5N4" frameborder="0" allowfullscreen></iframe>
 <p>these are the best amazing world of gumballs ever!!!!!!!</p> 
-<I Am SO M>L>G></I>
+<p>i love gumball</p>
+
+
+
+<P>NEW TOPIC POKEMON:</p>
+<p>pokemon adventure assentuals;</p>
+<p>.pokeballs</p>
+<p>.bag</p>
+<p>.oaks letter</p>
+<p>.pokedex</p>
+
+<p>tpo 10 things cut from pokemon games</p>
+<iframe width="600" height="330" src="https://www.youtube.com/embed/S6kYInaV5N4" frameborder="0" allowfullscreen></iframe>
+<p>part 2</p>
+<iframe width="600" height="330" src="https://www.youtube.com/embed/VrOWsQb_N1o" frameborder="0" allowfullscreen></iframe>
