--- a/index.html
+++ b/index.html
@@ -10,16 +10,8 @@
 <p>these are the best amazing world of gumballs ever!!!!!!!</p> 
 <p>i love gumball</p>
 
-
-
-<P>NEW TOPIC POKEMON:</p>
-<p>pokemon adventure assentuals;</p>
-<p>.pokeballs</p>
-<p>.bag</p>
-<p>.oaks letter</p>
-<p>.pokedex</p>
-
-<p>tpo 10 things cut from pokemon games</p>
-<iframe width="600" height="330" src="https://www.youtube.com/embed/S6kYInaV5N4" frameborder="0" allowfullscreen></iframe>
+<H1>new topic, pokemon</H1>
+<p>top ten things cut out of pokemon games</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/VrOWsQb_N1o" frameborder="0" allowfullscreen></iframe>
 <p>part 2</p>
-<iframe width="600" height="330" src="https://www.youtube.com/embed/VrOWsQb_N1o" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/VrOWsQb_N1o" frameborder="0" allowfullscreen></iframe>
