--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 
 <H1>new topic, pokemon</H1>
 <p>top ten things cut out of pokemon games</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/VrOWsQb_N1o" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Pr1XY3pejLA" frameborder="0" allowfullscreen></iframe>
 <p>part 2</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/VrOWsQb_N1o" frameborder="0" allowfullscreen></iframe>
