--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<body>
 <h3>Hello world</h3>
 
 <p>My name is <b>Gilbert</b></p>
@@ -15,3 +16,4 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Pr1XY3pejLA" frameborder="0" allowfullscreen></iframe>
 <p>part 2</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/VrOWsQb_N1o" frameborder="0" allowfullscreen></iframe>
+</body>
